@@ -8,54 +8,90 @@ require 'test/unit'
 module Gluon::Test
   class MemoizationTest < Test::Unit::TestCase
     class Foo
-      extend Forwardable
+      include Gluon::Memoization
 
-      def initialize(test_case)
-        @test_case = test_case
+      def initialize
+        super
+        @count = 0
       end
 
-      def_delegator :@test_case, :brackets
-    end
+      attr_reader :count
 
-    def brackets(s)
-      @count += 1
-      "<#{s}>"
+      def brackets(s)
+        @count += 1
+        "<#{s}>"
+      end
+      memoize :brackets
     end
 
     def setup
-      @count = 0
-      @foo = Foo.new(self)
+      @foo = Foo.new
+    end
+
+    def test_memoized
+      assert_equal('<foo>', @foo.brackets('foo'))
+      assert_equal(1, @foo.count)
+
+      assert_equal('<foo>', @foo.brackets('foo'))
+      assert_equal(1, @foo.count)
+
+      assert_equal('<bar>', @foo.brackets('bar'))
+      assert_equal(2, @foo.count)
+
+      assert_equal('<bar>', @foo.brackets('bar'))
+      assert_equal(2, @foo.count)
+    end
+  end
+
+  class SingleMemoizationTest < Test::Unit::TestCase
+    class Foo
+      extend Forwardable
+
+      def initialize
+        @count = 0
+      end
+
+      attr_reader :count
+
+      def brackets(s)
+        @count += 1
+        "<#{s}>"
+      end
+    end
+
+    def setup
+      @foo = Foo.new
     end
 
     def test_not_memoized
       assert_equal('<foo>', @foo.brackets('foo'))
-      assert_equal(1, @count)
+      assert_equal(1, @foo.count)
 
       assert_equal('<foo>', @foo.brackets('foo'))
-      assert_equal(2, @count)
+      assert_equal(2, @foo.count)
 
       assert_equal('<bar>', @foo.brackets('bar'))
-      assert_equal(3, @count)
+      assert_equal(3, @foo.count)
 
       assert_equal('<bar>', @foo.brackets('bar'))
-      assert_equal(4, @count)
+      assert_equal(4, @foo.count)
     end
 
     def test_memoized
-      @foo.extend Gluon::Memoization
-      @foo.memoize(:brackets)
+      @foo.extend Gluon::SingleMemoization
+      @foo.memoize :brackets
 
       assert_equal('<foo>', @foo.brackets('foo'))
-      assert_equal(1, @count)
+      assert_equal(1, @foo.count)
 
       assert_equal('<foo>', @foo.brackets('foo'))
-      assert_equal(1, @count)
+      assert_equal(1, @foo.count)
 
       assert_equal('<bar>', @foo.brackets('bar'))
-      assert_equal(2, @count)
+      assert_equal(2, @foo.count)
 
       assert_equal('<bar>', @foo.brackets('bar'))
-      assert_equal(2, @count)
+      assert_equal(2, @foo.count)
     end
   end
 end
